@@ -275,6 +275,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP530  (EXPERIMENTAL)
        Canon PIXMA MP900  (EXPERIMENTAL)
        Canon PIXMA MG2100 (EXPERIMENTAL)
+       Canon PIXMA MG3100 (EXPERIMENTAL)
        Canon PIXMA MG5300 (EXPERIMENTAL)
        Canon PIXMA MG6200 (EXPERIMENTAL)
        Canon PIXMA MG8200 (EXPERIMENTAL)
